[project]
name = "comparing-multi-vectorstore"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "0h-n0", email = "kbu94982@gmail.com" }
]
dependencies = [
    "llama-index~=0.6.18",
    "langchain~=0.0.27",
    "requests~=2.31.0",
    "beautifulsoup4~=4.12.2",
    "pydantic~=1.10.8",
    "tiktoken~=0.4.0",
    "qdrant-client~=1.2.0",
    "dotenv~=0.0.5",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true
